<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/country_name_russia"
        android:textSize="40sp"

        app:layout_constraintBottom_toTopOf="@+id/button_news"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/country_name_england"
        android:textSize="40sp"

        app:layout_constraintBottom_toTopOf="@+id/button_statistic"
        app:layout_constraintTop_toBottomOf="@+id/button_table"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/country_name_germany"
        android:textSize="40sp"

        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintTop_toBottomOf="@+id/button_news"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/country_name_spain"
        android:textSize="40sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_statistic"
        app:layout_constraintVertical_chainStyle="spread" />
</androidx.constraintlayout.widget.ConstraintLayout>