<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/label"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:text="@string/button_table"
            android:textSize="40sp"

            app:layout_constraintBottom_toTopOf="@+id/button_news"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/button_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:text="@string/button_news"
            android:textSize="40sp"

            app:layout_constraintBottom_toTopOf="@+id/button_statistic"
            app:layout_constraintTop_toBottomOf="@+id/button_table"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/button_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:text="@string/button_statistic"
            android:textSize="40sp"

            app:layout_constraintBottom_toTopOf="@+id/button_settings"
            app:layout_constraintTop_toBottomOf="@+id/button_news"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black"
            android:text="@string/button_settings"
            android:textSize="40sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_statistic"
            app:layout_constraintVertical_chainStyle="spread" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>